Keep XMLHttpRequest response data after receiving a server error

Fix XMLHttpRequest.responseText being set to empty string whenever a
server status code other than '200/OK' is received. XMLHttpRequest
specification says that response entity body is to be returned unless
the error flag is set, and the flag is set only in case of abort() or
network error. This change enables clients to receive additional error
information the server may return in the response body.

http://www.w3.org/TR/XMLHttpRequest/#the-responsetext-attribute

Task-number: QTBUG-21706

Change-Id: I7e44f481494dc7eddea3868d6f92ee45d7ab0c69
Reviewed-by: Yunqiao Yin <charles.yin@nokia.com>
Reviewed-by: Bea Lam <bea.lam@nokia.com>